refactor: 优化kvm体验&提示

--- a/rackshift-server/src/main/resources/i18n/message_en_US.properties
+++ b/rackshift-server/src/main/resources/i18n/message_en_US.properties
@@ -18,3 +18,6 @@ failed=failed
 cancelled=cancelled
 succeeded=succeeded
 i18n_ex_apikey_limit=Api Key Number Limited
+BareMetal_Server_Not_exists=BareMetal_Server_Not_exists
+OB_Not_exists=OB_Not_exists
+kvm_image_not_exists=kvm_image_not_exists
