--- a/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
@@ -16,3 +16,6 @@ failed=\u5931\u8D25
 cancelled=\u5DF2\u53D6\u6D88
 succeeded=\u6210\u529F
 i18n_ex_apikey_limit=Api Key \u6700\u591A5\u4E2A
+BareMetal_Server_Not_exists=\u88F8\u91D1\u5C5E\u670D\u52A1\u5668\u4E0D\u5B58\u5728
+OB_Not_exists=\u5E26\u5916\u4FE1\u606F\u4E0D\u5B58\u5728
+kvm_image_not_exists=\u627E\u4E0D\u5230 kvm \u955C\u50CF\uFF0C\u8BF7\u5728 RackShift \u4EA4\u6D41\u5FAE\u4FE1\u7FA4\u8054\u7CFB\u7FA4\u4E3B\u5F20\u5927\u6D77
