--- a/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
@@ -20,3 +20,5 @@ BareMetal_Server_Not_exists=\u88F8\u91D1\u5C5E\u670D\u52A1\u5668\u4E0D\u5B58\u57
 OB_Not_exists=\u5E26\u5916\u4FE1\u606F\u4E0D\u5B58\u5728
 kvm_image_not_exists=\u627E\u4E0D\u5230 kvm \u955C\u50CF\uFF0C\u8BF7\u5728 RackShift \u4EA4\u6D41\u5FAE\u4FE1\u7FA4\u8054\u7CFB\u7FA4\u4E3B\u5F20\u5927\u6D77
 no_brands_key_exists=\u7CFB\u7EDF\u8BBE\u7F6E\u201Dbrands\u201C \u4E0D\u5B58\u5728\uFF01
+no_kvm_port=\u8BF7\u5148\u8BBE\u7F6E webkvm \u7AEF\u53E3
+kvm_port_exists=webkvm \u7AEF\u53E3\u5DF2\u5B58\u5728
