feat: 支持关闭webkvm会话

--- a/rackshift-server/src/main/resources/i18n/message_en_US.properties
+++ b/rackshift-server/src/main/resources/i18n/message_en_US.properties
@@ -23,3 +23,6 @@ OB_Not_exists=OB_Not_exists
 kvm_image_not_exists=kvm_image_not_exists
 no_kvm_port=no kvm port
 kvm_port_exists=webkvm port exists
+no_outband_info=no outband info
+login_outband_error=login outband error
+close_kvm_error=close kvm error
