--- a/rackshift-server/src/main/resources/i18n/message_zh_TW.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_TW.properties
@@ -24,3 +24,6 @@ kvm_image_not_exists=\u627E\u4E0D\u5230 kvm \u93E1\u50CF\uFF0C\u8ACB\u5728 RackS
 no_brands_key_exists=\u7CFB\u7D71\u8A2D\u7F6E\u201Dbrands\u201C \u4E0D\u5B58\u5728\uFF01
 no_kvm_port=\u8ACB\u5148\u8A2D\u7F6E webkvm \u7AEF\u53E3
 kvm_port_exists=webkvm \u7AEF\u53E3\u5DF2\u5B58\u5728
+no_outband_info=\u65E0\u5E26\u5916\u4FE1\u606F
+login_outband_error=\u767B\u5F55\u5E26\u5916\u5931\u8D25
+close_kvm_error=\u5173\u95EDkvm\u4F1A\u8BDD\u5931\u8D25
